@@ -1,3 +1,5 @@
+Deal with the root device name of evbarm-aarch64 changing as a result
+of the the switch to GPT at source date 2020.05.24.18.44.46.
 
 - 2.3 released -
 
